# esp-idf-st7789

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  Makefile  README.md  decode_jpeg_v5.c  decode_png.c  idf_component.yml  partitions.csv  pngle.c  sdkconfig.defaults
CustomPCB/: README.md
battery-image/: README.md  split.sh
battery_image/: README.md
components/st7789/: CMakeLists.txt  Kconfig.projbuild  fontx.c  fontx.h  st7789.c  st7789.h
font/: ILGH24XB.FNT  ILGH32XB.FNT  ILMH16XB.FNT  ILMH24XB.FNT  ILMH32XB.FNT  LATIN32B.FNT
fonts/: ILGH16XB.FNT
include/: decode_jpeg.h  st7789.h
main/: CMakeLists.txt  Kconfig.projbuild  bmpfile.h  decode_image.c  decode_image.h  decode_jpeg.c  decode_jpeg.h  decode_jpeg_v5.c  decode_png.c  decode_png.h  fontx.c  fontx.h  main.c  pngle.c  pngle.h  st7789.c  st7789.c.old  st7789.h
web-image/: README.md  split.sh
web-image2/: README.md  split.sh
wifi-signal-image/: README.md  split.sh
wifi-signal-image2/: README.md  split.sh
wifi-signal-image3/: README.md  split.sh
wifi_signal_image/: README.md
